--- a/behaviorTest/pom.xml
+++ b/behaviorTest/pom.xml
@@ -385,7 +385,7 @@
 					<version>1.8</version>
 					<executions>
 						<execution>
-							<id>ModRunner_gsaTest</id>
+							<id>OfferRunner_Smoke</id>
 							<phase>post-integration-test</phase>
 							<goals>
 								<goal>run</goal>
@@ -400,6 +400,18 @@
 						</dependency>
 					</dependencies>
 				</plugin>
+
+				<!-- Maven Surefire Plugin for Running Tests -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <includes>
+                        <include>OfferRunner_Smoke.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
