--- a/behaviorTest/Dockerfile
+++ b/behaviorTest/Dockerfile
@@ -1,17 +1,8 @@
-# Use an official Maven image as a base image
-FROM maven:3.6.3-openjdk-8
+FROM jenkins/jenkins:latest
 
-# Set the working directory inside the container
-WORKDIR /app
+USER root
 
-# Copy the pom.xml file into the container at /app
-COPY pom.xml .
+# Install Maven
+RUN apt-get update && apt-get install -y maven
 
-# Run Maven to download the dependencies
-RUN mvn dependency:go-offline
-
-# The rest of your application code
-COPY . .
-
-# Command to run your application
-CMD ["mvn", "clean test"]
+USER jenkins
