--- a/behaviorTest/Jenkinsfile
+++ b/behaviorTest/Jenkinsfile
@@ -1,17 +1,18 @@
-pipline{
+pipeline {
     agent any
-    stages{
-        stage('Verify job is successfully run'){
-         steps{
-            sh 'google-chrome --version'
-        }
-        }
-        
-    
-         stage('Run Tests'){
-          steps{
-            sh './mvnw clean test'
-        }
+
+    tools {
+        maven 'Maven'
     }
+
+    stages {
+        stage('Build') {
+            steps {
+                script {
+                    sh 'mvn clean install'
+                }
+            }
+        }
     }
 }
+
