--- a/behaviorTest/pom.xml
+++ b/behaviorTest/pom.xml
@@ -405,7 +405,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
+                <version>3.11.0</version>
                 <configuration>
                     <includes>
                         <include>OfferRunner_Smoke.java</include>
